--- a/index.html
+++ b/index.html
@@ -1,22 +1,110 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <!-- Basic -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-    <!-- Mobile Metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
-    <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="Site Mutari">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     <title>Fundamentals of Computer Engineering</title>
-</style>
-</style>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .container {
+            max-width: 1200px;
+            width: 100%;
+            margin: 0 auto;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 1em 0;
+            text-align: center;
+        }
+
+        .header-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .header-title {
+            font-size: 1.5em;
+            padding-left: 20px;
+        }
+
+        nav ul {
+            display: flex;
+            gap: 20px;
+        }
+
+        nav li {
+            list-style: none;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: white;
+            padding: 5px 10px;
+            transition: background-color 0.3s;
+        }
+
+        nav a:hover {
+            background-color: #555;
+        }
+
+        nav a.active {
+            background-color: red;
+            color: white;
+        }
+
+        .footer-section {
+            background-color: #333;
+            width: 100%;
+            padding: 20px 0;
+            color: white;
+            text-align: center;
+        }
+
+        .footer-section a {
+            color: red;
+            text-decoration: none;
+        }
+
+        .footer-section p {
+            font-size: 0.8em;
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <div class="container header-content">
+            <div class="header-title">Webpage Header</div>
+            <nav>
+                <ul>
+                    <li><a href="#" class="active">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <div class="container">
+        </div>
+
+    <footer class="footer-section">
+        <p>&copy; 2024 All rights reserved. Design by <a href="#">Walsh Martínez</a></p>
+    </footer>
 </body>
 </html>
